# pydbmodels

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  package.yml  python-package.yml  test.yml
_models/activities/: chat_activities.py  group_activities.py  interest_activities.py  user_activities.py
_models/assets/: assets.py  interest_assets.py
_models/groups/: group_chats.py  group_members.py  groups.py  topics.py
_models/hdb_catalog/: hdb_action_log.py  hdb_cron_event_invocation_logs.py  hdb_cron_events.py  hdb_metadata.py  hdb_scheduled_event_invocation_logs.py  hdb_scheduled_events.py  hdb_schema_notifications.py  hdb_version.py
_models/interests/: chat_interests.py  group_interests.py  interests.py  user_interests.py
_models/notifications/: customerio_triggers.py  notifications.py
_models/public/: admin_users.py  chat_instances.py  chat_members.py  chat_session_events.py  chat_session_participants.py  chat_sessions.py  chats.py  friendships.py  schema_migrations.py  topics.py  user_nodes.py  user_permissions.py  users.py
_models/roles/: chat_user_roles.py  group_user_roles.py  roles.py
playground/: main.py
plyground/: main.py
scripts/: cleanup_test_db.sh  init_test_db.sh  lint.sh  test.sh
src/: __init__.py
src/pydbmodels/: __init__.py  settings.py
src/pydbmodels/generators/: __init__.py  generator.py
src/pydbmodels/generators/pydantic/: __init__.py  generator.py  type_map.py
src/pydbmodels/generators/templates/: _schema_init_file_templates.j2  _table_templates.j2  _user_defined_templates.j2  (+1 more)
tests/: Dockerfile
(+4 files in other folders)
